[package]
name = "butane_rocket_pool"
version = "0.5.3"
edition = "2018"
license = "MIT"
description = "Butane database adapter for Rocket framework"
keywords = ["rocket", "butane", "database"]
readme = "../README.md"
repository = "https://github.com/DimmKG/butane_rocket_pool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = { workspace = true }
serde = { workspace = true }
rocket_sync_db_pools = { workspace = true }
butane = { workspace = true }
